--- a/WiiBalanceWalker/WiiBalanceWalker.csproj
+++ b/WiiBalanceWalker/WiiBalanceWalker.csproj
@@ -81,7 +81,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionManager.cs" />
     <Compile Include="FormBluetooth.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,7 +96,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InputManager.cs" />
-    <Compile Include="vjoy_s.cs" />
     <EmbeddedResource Include="FormBluetooth.resx">
       <DependentUpon>FormBluetooth.cs</DependentUpon>
     </EmbeddedResource>
@@ -137,8 +135,9 @@
     <PostBuildEvent>powershell compress-archive * $(ProjectName)_$(PlatformName) -f</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PreBuildEvent>copy $(ProjectDir)\readme_for_release  $(TargetDir)README.txt
-copy $(ProjectDir)\vjoy\$(PlatformName)\* $(TargetDir)</PreBuildEvent>
+    <PreBuildEvent>copy "$(ProjectDir)readme_for_release"  "$(TargetDir)README.txt"
+
+copy "$(ProjectDir)vjoy\$(PlatformName)\*" "$(TargetDir)"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
