--- a/WiiBalanceWalker/app.config
+++ b/WiiBalanceWalker/app.config
@@ -7,66 +7,6 @@
     </configSections>
     <userSettings>
         <WiiBalanceWalker.Properties.Settings>
-            <setting name="ActionLeft" serializeAs="String">
-                <value>Key A</value>
-            </setting>
-            <setting name="ActionRight" serializeAs="String">
-                <value>Key D</value>
-            </setting>
-            <setting name="ActionForward" serializeAs="String">
-                <value>Key W</value>
-            </setting>
-            <setting name="ActionBackward" serializeAs="String">
-                <value>Key S</value>
-            </setting>
-            <setting name="ActionModifier" serializeAs="String">
-                <value>Key LShiftKey</value>
-            </setting>
-            <setting name="ActionJump" serializeAs="String">
-                <value>Key Space</value>
-            </setting>
-            <setting name="ActionDiagonalLeft" serializeAs="String">
-                <value>Mouse Move X</value>
-            </setting>
-            <setting name="ActionDiagonalRight" serializeAs="String">
-                <value>Mouse Move X</value>
-            </setting>
-            <setting name="AmountLeft" serializeAs="String">
-                <value>-15</value>
-            </setting>
-            <setting name="AmountRight" serializeAs="String">
-                <value>15</value>
-            </setting>
-            <setting name="AmountForward" serializeAs="String">
-                <value>-15</value>
-            </setting>
-            <setting name="AmountBackward" serializeAs="String">
-                <value>15</value>
-            </setting>
-            <setting name="AmountModifier" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="AmountJump" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="AmountDiagonalLeft" serializeAs="String">
-                <value>-15</value>
-            </setting>
-            <setting name="AmountDiagonalRight" serializeAs="String">
-                <value>15</value>
-            </setting>
-            <setting name="TriggerLeftRight" serializeAs="String">
-                <value>8</value>
-            </setting>
-            <setting name="TriggerForwardBackward" serializeAs="String">
-                <value>9</value>
-            </setting>
-            <setting name="TriggerModifierLeftRight" serializeAs="String">
-                <value>15</value>
-            </setting>
-            <setting name="TriggerModifierForwardBackward" serializeAs="String">
-                <value>16</value>
-            </setting>
             <setting name="EnableJoystick" serializeAs="String">
                 <value>False</value>
             </setting>
@@ -90,6 +30,18 @@
             </setting>
             <setting name="StartMinimized" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="ScreenWidth" serializeAs="String">
+                <value>1920</value>
+            </setting>
+            <setting name="ScreenHeight" serializeAs="String">
+                <value>1080</value>
+            </setting>
+            <setting name="AreaWidth" serializeAs="String">
+                <value>1920</value>
+            </setting>
+            <setting name="AreaHeight" serializeAs="String">
+                <value>1080</value>
             </setting>
         </WiiBalanceWalker.Properties.Settings>
     </userSettings>
